; ModuleID = '/home/carl/AnghaBench/openssl/crypto/aes/extr_aes_wrap.c_AES_unwrap_key.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/aes/extr_aes_wrap.c_AES_unwrap_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AES_decrypt = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @AES_unwrap_key(i32* %0, i8* %1, i8* %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load i32*, i32** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = load i8*, i8** %9, align 8
  %15 = load i32, i32* %10, align 4
  %16 = load i64, i64* @AES_decrypt, align 8
  %17 = trunc i64 %16 to i32
  %18 = call i32 @CRYPTO_128_unwrap(i32* %11, i8* %12, i8* %13, i8* %14, i32 %15, i32 %17)
  ret i32 %18
}

declare dso_local i32 @CRYPTO_128_unwrap(i32*, i8*, i8*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
